<resources>
    <string name="app_name">Desahogate</string>
    <string name="title_activity_login">Desahogate</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_passwordRepite">Repite contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="action_registro">Registrarse</string>
    <string name="error_invalid_email">Email inválido.</string>
    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_invalid_passwordValid">La contraseña no es igual a la anterior</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_registro">Registro</string>


    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="bienvenido_a_desahogate">Bienvenido a Desahogate</string>
    <string name="escribirMensaje">Escribir mensaje</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="seguir">Seguir</string>
    <string name="no_seguir">No seguir</string>
    <string name="ChatsDesahogate">Conéctate con gente de ideas afines e intercambia tus experiencias.</string>
    <string name="publica">Hay tantas cosas en esta vida que nos obligamos a no hacer por pena, por el miedo al que dirán. Pública lo que desees, con la única consigna de no dañar a nadie. Inténtalo, es más divertido.</string>
</resources>
